[package]
name = "rustflowd"
version = "0.1.0"
authors = ["Hitoshi Irino <irino@sfc.wide.ad.jp>"]
edition = "2018"
description = "NetFlow/IPFIX Probe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.6"
clap = "2.33"
pnet = "0.26.0"
pcap-file = "1.1.1"
byteorder = "1.3.2"
