[package]
name = "rustflowd"
version = "0.1.0"
authors = ["Hitoshi Irino <irino@sfc.wide.ad.jp>"]
edition = "2018"
description = "NetFlow/IPFIX Probe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.6.0"
clap = "2.33.3"
pnet = "0.27.2"
pcap-parser = "0.9.3"
