[package]
name = "rustflowd"
version = "0.1.0"
authors = ["Hitoshi Irino <irino@sfc.wide.ad.jp>"]
edition = "2021"
description = "NetFlow/IPFIX Probe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]] # Bin to run the rustflowd gRPC server
name = "rustflowd"
path = "src/rustflowd_main.rs"

[dependencies]
bytes = "1.2.1"
clap = {version = "3.2.17", features = ["derive"]}
pcap-parser = "0.14"
pnet = "0.30.0"
prost = "0.11"
prost-build = "0.11.1"
prost-types = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_with = {version = "2.0.0", features = ["json"]}
tokio = {version = "1.20", features = ["full"]}
tonic = "0.8"

[build-dependencies]
pin-project-internal = "0.4.29" # temporary for syn
prost-build = "0.11.1"
tonic-build = "0.8"
